<resources>
    <string name="app_name">BleDeviceMonitor</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="start_scan">Start Scan</string>
    <string name="disconnect">Disconnect</string>
    <string name="send_message">Send</string>
    <string name="name">Name :</string>
    <string name="rssi">Rssi</string>
    <string name="address">Address :</string>
    <string name="set_rssi">RSSI</string>
    <string name="message">Under development</string>
</resources>
