<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.netdevs.subarata.bledevicemonitor.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/connection_state"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/carrage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|start"
            android:text="@string/set_rssi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/message" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:text="@string/send_message" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <android.support.v7.widget.ListViewCompat
            android:id="@+id/device_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/btn_style"
                android:text="@string/disconnect"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_start_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style"
                    android:text="@string/start_scan" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_stop_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style"
                    android:text="@string/stop_scan" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/connection_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
